Add sass compilation

--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/EMBL-Design-Language/website-grid-alpha/issues"
   },
-  "homepage": "https://github.com/EMBL-Design-Language/website-grid-alpha#readme"
+  "homepage": "https://github.com/EMBL-Design-Language/website-grid-alpha#readme",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-sass": "^4.0.1"
+  }
 }
